@@ -16,7 +16,7 @@ href="../index.html">Back to Home Page</a>&nbsp;]</p>
 
 <h1 class="title" align="center">Mini-XML Home Page</h1>
 
-<p class="title" align="center">Current Release: v1.1.1, July 21, 2003<br/>
+<p class="title" align="center">Current Release: v1.1.1, July 22, 2003<br/>
 [&nbsp;<a
 href="mxml-1.1.1.tar.gz">Download&nbsp;Source&nbsp;(.tar.gz&nbsp;70k)</a>
 | <a
@@ -153,6 +153,30 @@ mxml_node_t *tree;
 fp = fopen("filename.xml", "w");
 mxmlSaveFile(tree, fp, MXML_NO_CALLBACK);
 fclose(fp);
+</pre>
+
+<p>The <a
+href="documentation.html#mxmlLoadString"><tt>mxmlLoadString()</tt></a>,
+<a
+href="documentation.html#mxmlSaveAllocString"><tt>mxmlSaveAllocString()</tt></a>,
+and <a
+href="documentation.html#mxmlSaveString"><tt>mxmlSaveString()</tt></a>
+functions load XML node trees from and save XML node trees to
+strings:</p>
+
+<pre>
+char buffer[8192];
+char *ptr;
+mxml_node_t *tree;
+
+...
+tree = mxmlLoadString(NULL, buffer, MXML_NO_CALLBACK);
+
+...
+mxmlSaveString(tree, buffer, sizeof(buffer), MXML_NO_CALLBACK);
+
+...
+ptr = mxmlSaveAllocString(tree, MXML_NO_CALLBACK);
 </pre>
 
 <p>You can find a named element/node using the <a
